Стандартизация ошибок. Округление.  Добавлен .htaccess для передачи Authorization и JSON-ответ при неверном токене
